@@ -1,8 +1,0 @@
-# No kernel is included.
-KERNELNAME =
-
-# No files in DEST.
-TARGET = $(STAMPS)tree-demo-stamp
-
-# FIXME: Temporary fix, these files should be in a udeb!
-EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
