@@ -1,4 +1,4 @@
-SUBARCH_SUPPORTED = mac amiga demo cdrom
+SUBARCH_SUPPORTED = mac amiga cdrom
 
 EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
 
