@@ -1,14 +1,0 @@
-# No kernel is included.
-KERNELVERSION = 2.2.25
-KERNELNAME = 
-KERNELIMAGEVERSION = 2.2.25-mac
-KERNEL_FLAVOUR = di
-
-# No files in DEST.
-TARGET = $(STAMPS)tree-demo-stamp
-
-# HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
-TYPE = demo
-
-USERDEVFS = t
-
