@@ -1,4 +1,4 @@
-SUBARCH_SUPPORTED = demo r4k-ip22 r5k-ip22 sb1-swarm-bn miniiso
+SUBARCH_SUPPORTED = r4k-ip22 r5k-ip22 sb1-swarm-bn miniiso
 
 # FIXME: Temporary fix, these files should be in a udeb!
 EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
