@@ -1,4 +1,4 @@
-SUBARCH_SUPPORTED = demo r3k-kn02 r4k-kn04 cdrom
+SUBARCH_SUPPORTED = r3k-kn02 r4k-kn04 cdrom
 
 VERSIONED_SYSTEM_MAP = t
 
