@@ -1,14 +1,0 @@
-# No kernel is included.
-KERNELVERSION = 2.4.25-powerpc
-KERNELNAME =
-KERNELIMAGEVERSION = $(KERNELVERSION)
-KERNEL_FLAVOUR = di
-
-# No files in DEST.
-TARGET = $(STAMPS)tree-demo-stamp
-
-# FIXME: Temporary fix, these files should be in a udeb!
-EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
-
-# HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
-TYPE = demo
