@@ -1,4 +1,4 @@
-MEDIUM_SUPPORTED = netboot demo
+MEDIUM_SUPPORTED = netboot
 
 # The version of the kernel to use.
 KERNELVERSION = 2.4.21-1-s390
