@@ -1,4 +1,4 @@
-SUBARCH_SUPPORTED = demo sparc32 sparc64 miniiso cdrom
+SUBARCH_SUPPORTED = sparc32 sparc64 miniiso cdrom
  
 VERSIONED_SYSTEM_MAP = t
  
