@@ -1,4 +1,0 @@
-console-keymaps-at
-
-hw-detect
-bogl-bterm-udeb
