@@ -6,13 +6,9 @@ Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Joey Hess <joeyh@debian.org>, Alastair McKinstry <mckinstry@computer.org>
 Standards-Version: 3.6.1.0
 
-Package: debian-installer-demo
-Recommends: ${kernel:Package}
+Package: debian-installer-manual
 Architecture: i386 powerpc mips ia64 m68k hppa sparc alpha s390
-Description: run a live demo of the Debian Installer, without rebooting
- This package allows you to run a demonstration version of the Debian
- installer in a chroot on a Debian system. While it might be possible to
- use the demo system to actually install Debian to a spare partition, there
- are better (and safer!) ways than using this Debian system, such as 
- debootstrap. However, this package is useful if you'd like a look at the
- Debian installer, or want to test or debug some aspect of it.
+Description: Debian installation manual
+ This package contains the Debian installation manual, in a variety of
+ languages. It also includes the installation HOWTO, and a variety of
+ developer documentation for the Debian Installer.
