@@ -1,2 +1,1 @@
-debian/d-i-demo usr/sbin
 tmp/demo/tree/* usr/lib/debian-installer-demo
